tests/neg-custom-args/captures/sepchecks2.check
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:7:10 ---------------------------------------------------------
7 |  println(c) // error
  |          ^
  |          Separation failure: Illegal access to {c} which is hidden by the previous definition
  |          of value xs with type List[box () => Unit].
  |          This type hides capabilities  {xs*, c}
-- Error: tests/neg-custom-args/captures/sepchecks2.scala:10:33 --------------------------------------------------------
10 |  foo((() => println(c)) :: Nil, c) // error
   |                                 ^
   |                                 Separation failure: argument of type  (c : Object^)
   |                                 to method foo: (xs: List[box () => Unit], y: Object^): Nothing
   |                                 corresponds to capture-polymorphic formal parameter y of type  Object^
   |                                 and captures {c}, but this capability is also passed separately
   |                                 in the first argument with type  List[box () ->{c} Unit].
   |
   |                                   Capture set of first argument         : {c}
   |                                   Hidden set of current argument        : {c}
   |                                   Footprint of first argument           : {c}
   |                                   Hidden footprint of current argument  : {c}
   |                                   Declared footprint of current argument: {}
   |                                   Undeclared overlap of footprints      : {c}
